# WinDroidPro

./: ADD_WORKFLOW_TERMUX.md  BUILD_ON_ANDROID.md  FINAL_DELIVERY.md  FINAL_DELIVERY_NOTES.md  FREE_CLOUD_BUILD_OPTIONS.md  GITHUB_ACTIONS_SETUP.md  PROJECT_SUMMARY.md  README.md  README_FIRST.md  TECHNICAL_SPECIFICATION.md  todo.md
.github/workflows/: Build.yml
WinDroidPro/: .gitignore  BUILD_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  build.bat  build.gradle  build.sh  gradle.properties  settings.gradle
WinDroidPro/.github/workflows/: README.md  build.yml
WinDroidPro/app/: build.gradle  proguard-rules.pro
WinDroidPro/app/src/main/: AndroidManifest.xml
WinDroidPro/app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp  usb_manager.cpp
WinDroidPro/app/src/main/java/com/windroidpro/: WinDroidApplication.kt
WinDroidPro/app/src/main/java/com/windroidpro/core/: NativeBridge.kt
WinDroidPro/app/src/main/java/com/windroidpro/data/: Container.kt
WinDroidPro/app/src/main/java/com/windroidpro/native_bridge/: NativeBridge.kt
WinDroidPro/app/src/main/java/com/windroidpro/ui/: MainActivity.kt
WinDroidPro/app/src/main/java/com/windroidpro/ui/theme/: Color.kt  Theme.kt  Type.kt
WinDroidPro/app/src/main/res/values/: strings.xml  themes.xml
WinDroidPro/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  usb_device_filter.xml
